unpackaged/main/default/objects/HealthCloudGA__EhrCarePlan__c/fields/HealthCloudGA__Notes__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>