unpackaged/main/default/objects/HealthCloudGA__EhrCarePlan__c/fields/HealthCloudGA__PeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PeriodEnd__c</fullName>
    <label>Period End</label>
    <type>DateTime</type>
</CustomField>